fix for jdk11