@@ -34,7 +34,7 @@ public class FederalChannel extends AbsChannel {
         try {
             return restClient.post("federal/acquireCert", String.class, entity, new HashMap<>());
         } catch (Exception e) {
-            throw new IOException("无法连接到社区服务器:%s, error:%s".formatted(restClient.getUri(), e.getMessage()), e);
+            throw new IOException(String.format("无法连接到社区服务器:%s, error:%s", restClient.getUri(), e.getMessage()), e);
         }
     }
 
@@ -48,7 +48,7 @@ public class FederalChannel extends AbsChannel {
         try {
             return restClient.post("federal/ping/" + cert, FederalStatePongEntity.class, entity, new HashMap<>());
         } catch (Exception e) {
-            throw new IOException("无法连接到社区服务器:%s, error:%s".formatted(restClient.getUri(), e.getMessage()), e);
+            throw new IOException(String.format("无法连接到社区服务器:%s, error:%s", restClient.getUri(), e.getMessage()), e);
         }
     }
 
@@ -63,7 +63,7 @@ public class FederalChannel extends AbsChannel {
         try {
             return restClient.post("federal/ping", String.class, entity, new HashMap<>());
         } catch (Exception e) {
-            throw new IOException("无法连接到社区服务器:%s, error:%s".formatted(restClient.getUri(), e.getMessage()), e);
+            throw new IOException(String.format("无法连接到社区服务器:%s, error:%s", restClient.getUri(), e.getMessage()), e);
         }
     }
 
@@ -75,7 +75,7 @@ public class FederalChannel extends AbsChannel {
         try {
             return restClient.post("federal/conf/" + cert, String.class, entity, new HashMap<>());
         } catch (Exception e) {
-            throw new IOException("无法连接到社区服务器:%s, error:%s".formatted(restClient.getUri(), e.getMessage()), e);
+            throw new IOException(String.format("无法连接到社区服务器:%s, error:%s", restClient.getUri(), e.getMessage()), e);
         }
     }
 }
